tests/errors/path_remove_missing.ki
var path = import("path")
path.remove("/no/such/kirito/file/zzz.txt")
